[package]
name = "hitomi"
version = "0.8.1"
description = "A CLI application that builds and updates playlists on a Plex server using json-based profiles."
authors = ["Nathaniel Ledford <nate@nateledford.com>"]
homepage = "https://github.com/nledford/hitomi"
repository = "https://github.com/nledford/hitomi"
documentation = "https://docs.rs/hitomi"
rust-version = "1.80.0"
license = "GPL-3.0"
readme = "README.md"
keywords = ["plex", "plexamp", "playlists"]
categories = ["command-line-interface"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["env", "derive"] }
derive_builder = "0.20.0"
dialoguer = "0.11.0"
humantime = "2.1.0"
itertools = "0.13.0"
jiff = { version = "0.1.3" }
log = "0.4.22"
nutype = { version = "0.4.3", features = ["regex", "serde"] }
rand = "0.9.0-alpha.2"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["hickory-dns", "json", "native-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
simplelog = { version = "0.12.2", features = ["paris", "termcolor"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "macros", "sqlite"] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
